text wrap issue resolved

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -24,7 +24,7 @@
     margin-top: 150px;
 }
 .m-top-text{
-    margin-top: 290px;
+    margin-top: 90px;
 }
 .spacer-2{
     height: 500px;
@@ -32,32 +32,14 @@
 .z-circle{
     z-index: 1 !important;
 }
-/* .circle-to-wrap{
-    position: relative;
-    display: block;
-    height: 600px;
-} */
-/* .circle-to-wrap::before{
-    content: "";
-    display: inline-block;
-    height: 500px;
-    width:500px;
-    background-color: black;
-    position: absolute;
-    right: 445px;
-    top: -112px;
-    border-radius: 50%;
-    shape-outside: circle();
-} */
-.shaper{
-    background-color: aliceblue;
-    width: 200px;
-    height: 200px;
-    /* border-radius: 50%; */
-    position: relative;
-    float: left;
-    /* top: 88px;
-left: -105px; */
 
-shape-outside: circle();
+.text-wrap{
+    /* background-color: aliceblue; */
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    
+    float: left;
+
+shape-outside: circle(307px at -272px 150px);
 }
